# MPG_bringup

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig_khai
main/: CMakeLists.txt  Icm20789Defs.h  Kconfig.projbuild  adc.c  adc.h  button_gpio.c  button_gpio.h  common.c  common.h  connectWifi.c  connectWifi.h  define.h  gatt_server.c  gatt_server.h  http_client.c  http_client.h  init.c  init.h  iot_button.h  main.c  network.c  network.h  ota.c  ota.h  parser.c  parser.h  sensor.c  sensor.h  storage.c  storage.h  wifi_test.c
main/ble_test/: ble_test.c
